feat: Add HTTPS, CORS fixes, Autorizador & Ledger modules
- Fix CORS configuration for all microservices (permissive for dev)
- Add HTTPS support with self-signed certificates
- Add Nginx configuration with TLS 1.2/1.3, HTTP/2, rate limiting
- Add security headers (HSTS, CSP, X-Frame-Options, etc.)
- Add Dockerfile for Autorizador module (authorization & fraud detection)
- Add Dockerfile for Ledger module (double-entry bookkeeping)
- Add SQL schema for new modules (authorization_rules, ledger_entries, etc.)
- Add docker-compose.complete.yml with all 10 microservices
- Add start-complete.sh initialization script
- Add security audit report
- Add architecture documentation and diagrams